MODEXPW-461 - Non-existent Electronic access Relationship type ID does not fall under Errors accordion (#513)